--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,22 @@
   --font-inter: var(--font-inter);
 }
 
+/* @keyframes blink {
+
+  0%,
+  100% {
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+.animate-blink {
+  animation: blink 1.2s ease-in-out infinite;
+} */
+
 /* Spinning animation for circular text */
 @keyframes spin-slow {
   from {
